--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
                         <a href="#projects" class="btn btn-secondary">View Work</a>
                     </div>
                     <div class="social-links">
-                        <a href="https://github.com/TEJAS" class="social-btn" target="_blank" title="GitHub">
+                        <a href="https://github.com/tejas004s" class="social-btn" target="_blank" title="GitHub">
                             <svg width="24" height="24" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/></svg>
                         </a>
                         <a href="mailto:tejashowda004@gmail.com" class="social-btn" title="Email">
@@ -778,6 +778,28 @@
                         <span class="tag">NLP</span>
                     </div>
                 </div>
+
+                <div class="project-card">
+                    <h3>🌌 Solar System Simulator</h3>
+                    <p>Interactive 3D simulation of the solar system built with WebGL. Allows users to explore planetary orbits, rotations, and other celestial phenomena in real-time.</p>
+                    <div class="skill-tags">
+                        <span class="tag">JavaScript</span>
+                        <span class="tag">WebGL</span>
+                        <span class="tag">Three.js</span>
+                        <span class="tag">Physics</span>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <h3>🎥 Netflix Clone</h3>
+                    <p>Full-stack Netflix clone with user authentication, movie browsing, and video streaming features. Includes a responsive UI and integration with a movie database API.</p>
+                    <div class="skill-tags">
+                        <span class="tag">React</span>
+                        <span class="tag">Firebase</span>
+                        <span class="tag">Node.js</span>
+                        <span class="tag">TMDB API</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -866,6 +888,10 @@
                         <h4 style="margin-bottom: 1rem; color: var(--accent-primary);">🎓 Education</h4>
                         <p style="color: var(--text-secondary); margin-bottom: 0.5rem;"><strong>B.Tech in Computer Science</strong></p>
                         <p style="color: var(--text-secondary); font-size: 0.9rem;">UVCE, Bengaluru • CGPA: 8.15 • 2022-2026</p>
+                        <p style="color: var(--text-secondary); margin-bottom: 0.5rem;"><strong>12th Grade</strong></p>
+                        <p style="color: var(--text-secondary); font-size: 0.9rem;">96%</p>
+                        <p style="color: var(--text-secondary); margin-bottom: 0.5rem;"><strong>10th Grade</strong></p>
+                        <p style="color: var(--text-secondary); font-size: 0.9rem;">97%</p>
                     </div>
                 </div>
             </div>
@@ -874,7 +900,7 @@
 
     <footer>
         <div class="container">
-            <p>© 2024 Tejas S. Crafted with passion and precision.</p>
+            <p>© 2025 Tejas S. Crafted with passion and precision.</p>
             <p style="margin-top: 0.5rem; font-size: 0.9rem;">Open to opportunities • Available for full-time roles and internships</p>
         </div>
     </footer>
